@@ -148,6 +148,12 @@ limitations under the License.
   background-image: url( ../../img/ico/cross.png );
 }
 
+button.disabled
+{
+    opacity: 0.5;
+    cursor: not-allowed;
+}
+
 #content #collections #navigation #add span
 {
   background-image: url( ../../img/ico/plus-button.png );
